# robot_optimizer_core

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  LICENSE  Makefile  README.md  README_CI_INTEGRATION.md  ROADMAP.md  SECURITY.md  TECHNICAL_DEBT_ANALYSIS.md  cliff.toml  fatal_lint.txt  migrate.py  migration_summary.json  mkdocs.yml  mutmut_config.py  pyproject.toml  run_test_coverage_check.py  sonar-project.properties  tox.ini
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  mutation.yml  nightly.yml  pr_fast.yml  publish.yml  sonar.yml
ci/: check_mutation_rate.py  check_per_file_coverage.py  check_quarantine_age.py  check_test_determinism.py  check_version.py  pyproject.optional-deps.snippet.toml  tox.ini.snippet
docs/: changelog.md  developer-manual.md  development.md  extending.md  getting-started.md  index.md  install.md  product_model_alignment.md  repository_capabilities_analysis.md
docs/api/: analyzers.md  domain.md  plugins.md
docs/architecture/: ci.md
docs/examples/: sample-audit-report.md
examples/bad_robot_suite/: checkout.robot  login.robot
examples/bad_robot_suite/resources/: common.resource  legacy_keywords.resource
src/robot_optimizer/domain/: base.py
src/robot_optimizer/domain/repositories/: robot_parser_repository.py  test_result_repository.py
src/robot_optimizer/domain/value_objects/: cross_file_reference.py
src/robot_optimizer/infrastructure/: performance.py
src/robot_optimizer_backup/application/services/: parser_strategies.py
src/robot_optimizer_backup/domain/: events.py
src/robot_optimizer_backup/domain/entities/: __init__.py  analysis.py
src/robot_optimizer_backup/domain/repositories/: __init__.py
src/robot_optimizer_backup/domain/value_objects/: __init__.py  flakiness_stats.py  location.py  optimization_suggestion.py  pattern.py  robot_ast.py  severity.py  sleep_pattern.py  test_result.py
src/robot_optimizer_backup/infrastructure/parsers/: __init__.py  robot_ast_parser.py  robot_xml_parser.py
src/robot_optimizer_backup/infrastructure/repositories/: batch_repository.py
src/robot_optimizer_core/: AGENTS.md  CLAUDE.md  __init__.py  __main__.py  __version__.py  _deprecation.py  api.py  boundaries.py  cache.py  cli.py  context.py  deprecation.py  di.py  di_safe.py  exceptions.py  extensions.py  listener.py  logging.py  metrics.py  metrics_safe.py  plugin.py  providers.py  service.py
src/robot_optimizer_core/analyzers/: __init__.py  base.py  base_analyzer.py  dead_code.py  dead_code_analyzer.py  flakiness.py  flakiness_analyzer.py  hardcoded_value.py  naming_convention.py  registry.py  setup_teardown.py  sleep_detector.py  tag_consistency.py  test_documentation.py
src/robot_optimizer_core/application/analyzers/: __init__.py  base.py  dead_code.py  flakiness.py  hardcoded_value.py  naming_convention.py  registry.py  setup_teardown.py  sleep_detector.py  tag_consistency.py  test_documentation.py
src/robot_optimizer_core/application/services/: analysis_service.py
src/robot_optimizer_core/cli/: __init__.py  _baseline.py  _commands.py  _formatters.py  _html.py  _parser.py
src/robot_optimizer_core/composition/: container.py  context.py
src/robot_optimizer_core/config/: __init__.py  settings.py  toml_loader.py
src/robot_optimizer_core/discovery/: __init__.py  file_finder.py  secure_file_finder.py
src/robot_optimizer_core/domain/: __init__.py  base.py
src/robot_optimizer_core/entrypoints/: listener.py  public_api.py
src/robot_optimizer_core/infrastructure/: __init__.py  file_provider.py  json_test_result_repository.py
src/robot_optimizer_core/parsers/: __init__.py  robot_ast_parser.py
src/robot_optimizer_core/performance/: optimized_discovery.py
src/robot_optimizer_core/premium/: __init__.py
src/robot_optimizer_core/repositories/: __init__.py  json_test_result_repository.py
src/robot_optimizer_core/resources/: report.html.j2
tests/: conftest.py  test_pydantic_v2_compliance.py  test_pydantic_v2_compliance.py.skip
tests/component/: conftest.py  test_analysis_workflow.py  test_analyzer_determinism.py  test_end_to_end.py  test_performance_baselines.py
tests/contracts/: test_output_schema_contract.py  test_plugin_contract.py  test_public_api_contract.py
tests/contracts/schemas/: output_v1.json  sarif_structure.json
tests/fixtures/regression/: phase1_baseline.json
tests/functional/: test_functional.py
tests/integration/: conftest.py  test_analyzer_integration.py  test_cli_subprocess.py  test_cli_watch.py  test_listener_integration.py  test_parser_integration.py  test_plugin_integration.py
tests/unit/: conftest.py  helpers.py  test_api.py  test_cache.py  test_cli.py  test_cli_baseline.py  test_cli_coverage.py  test_cli_direct.py  test_context.py  test_deprecation.py  test_di.py  test_exceptions.py  test_json_repository.py  test_listener.py  test_logging.py  test_metrics.py  test_plugin.py  test_premium.py  test_providers.py  test_service.py  test_version.py
tests/unit/analyzers/: test_base.py  test_base_lazy_metrics.py  test_dead_code.py  test_dead_code_decomposition.py  test_dead_code_property.py  test_dead_code_strategies.py  test_flakiness.py  test_flakiness_settings.py  test_new_analyzers.py  test_pattern_types.py  test_registry.py  test_setup_teardown_internals.py  test_sleep_detector.py  test_sleep_detector_naming.py  test_sleep_detector_paths.py  test_tag_collect_helper.py
tests/unit/config/: test_settings.py  test_toml_loader.py
tests/unit/discovery/: test_file_finder.py
tests/unit/domain/: test_base.py  test_complete_coverage.py  test_entities.py  test_events.py  test_events.py.skip  test_finding_new_methods.py  test_ports.py  test_value_objects.py  test_value_objects_coverage.py  test_value_objects_coverage.py.skip
tests/unit/parsers/: test_robot_ast_parser.py  test_robot_ast_parser_property.py
(+55 files in other folders)
