[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "robot-framework-optimizer-core"
version = "1.0.0b1"
description = "Core analysis engine for Robot Framework test suite optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kobolcs", email = "kobolcs@users.noreply.github.com"}
]
keywords = [
    "robotframework",
    "testing",
    "automation",
    "analysis",
    "optimization",
    "quality",
    "static-analysis",
    "linting",
    "quality-assurance",
    "test-automation",
    "robotframework-lint",
    "dead-code"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Typing :: Typed"
]

# Minimal core dependencies only
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "robotframework>=7.4.2",
    "typing-extensions>=4.15.0; python_version < '3.12'",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.152.9",
    "mutmut>=3.5.0",
    "watchdog>=6.0.0",

    # Code quality
    "ruff>=0.15.13",
    "mypy>=2.1.0",

    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-git-revision-date-localized-plugin>=1.5.2",
    "mkdocs-minify-plugin>=0.8.0",

    # Pre-commit
    "pre-commit>=4.6.0",
]

# Minimal test dependencies
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.152.9",
]

# Documentation only
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-git-revision-date-localized-plugin>=1.5.2",
    "mkdocs-minify-plugin>=0.8.0",
]

# Watch mode support
watch = [
    "watchdog>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/kobolcs/robot_optimizer_core"
Documentation = "https://kobolcs.github.io/robot_optimizer_core/docs"
Repository = "https://github.com/kobolcs/robot_optimizer_core"
Issues = "https://github.com/kobolcs/robot_optimizer_core/issues"
Changelog = "https://github.com/kobolcs/robot_optimizer_core/blob/master/CHANGELOG.md"

[project.scripts]
robot-optimizer = "robot_optimizer_core.cli:main"

[project.entry-points."robot_optimizer_core.analyzers"]
# Core analyzers available for discovery
dead_code = "robot_optimizer_core.analyzers:DeadCodeAnalyzer"
sleep_detector = "robot_optimizer_core.analyzers:SleepDetector"
flakiness = "robot_optimizer_core.analyzers:FlakinessAnalyzer"
hardcoded_value = "robot_optimizer_core.analyzers:HardcodedValueAnalyzer"
naming_convention = "robot_optimizer_core.analyzers:NamingConventionAnalyzer"
setup_teardown = "robot_optimizer_core.analyzers:SetupTeardownAnalyzer"
tag_consistency = "robot_optimizer_core.analyzers:TagConsistencyAnalyzer"
test_documentation = "robot_optimizer_core.analyzers:TestDocumentationAnalyzer"

[tool.hatch.build]
packages = ["src/robot_optimizer_core"]

[tool.hatch.build.targets.wheel]
packages = ["src/robot_optimizer_core"]
artifacts = ["src/robot_optimizer_core/py.typed"]
exclude = [
    "src/robot_optimizer_core/AGENTS.md",
    "src/robot_optimizer_core/CLAUDE.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]
exclude = [
    "src/robot_optimizer_core/AGENTS.md",
    "src/robot_optimizer_core/CLAUDE.md",
]

# Testing configuration
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=robot_optimizer_core",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=95",
]
markers = [
    "unit: Unit tests - fast and isolated",
    "integration: Integration tests - component interactions",
    "component: Component tests - multi-component workflows",
    "slow: Tests that take significant time",
    "performance: Performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:robot.*",
    "ignore::PendingDeprecationWarning:robot.*",
    "ignore::FutureWarning:robot.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:pydantic_settings.*",
    "ignore::ResourceWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/robot_optimizer_core"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 95
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# Ruff configuration - Latest 2025 settings
[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EXE",   # flake8-executable
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "TRY",   # tryceratops
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert used
    "ARG",    # unused arguments
    "PLR2004", # magic values
]
"src/robot_optimizer_core/api.py" = [
    "PLR0913",  # public API surface intentionally accepts many optional kwargs
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.isort]
known-first-party = ["robot_optimizer_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["robot.*"]
ignore_missing_imports = true

# All modules now pass strict mypy. No per-module overrides remain.
